fix scroll default padding and minor layout issues

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -8,7 +8,8 @@ html {
     scroll-snap-type: y mandatory;
     overflow-x: hidden;
     overflow-y: scroll;
-    height: 100%;
+    height: 100vh;
+    scroll-padding: 0;
 }
 body {
     text-align: center;
@@ -44,9 +45,6 @@ body {
 section {
     width: 100vw;
 }
-#first-section, #first-part, #second-part {
-    height: 100vh;
-}
 .flex {
     display: flex;
 }
@@ -81,7 +79,7 @@ section {
     justify-items: center;
 }
 .orange-font {
-    color: rgb(255, 93, 44);
+    color: rgb(255, 111, 0);
 }
 .gray-font {
     color: rgb(160, 160, 160);
@@ -159,9 +157,9 @@ a {
             top: calc(8vh - (8vh - 24px) / 2);
             left: calc(56px - 100vw);
             width: 100vw;
-            height: fit-content;
+            height: 64vh;
             padding: 3.5rem 0;
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(0, 0, 0);
             list-style-type: none;
             -webkit-font-smoothing: antialiased;
             
@@ -172,9 +170,9 @@ a {
             border-bottom: .5px solid black;
 
             li {
-                padding: 1.25rem 0;
+                padding: 1.75rem 0;
                 font-size: 1.55rem;
-                color: black;
+                color: white;
                 font-weight: 600;
                 width: fit-content;
                 letter-spacing: 1px;
@@ -182,7 +180,7 @@ a {
             #order-online {
                 color: white;
                 background-color: rgb(255, 140, 0);
-                margin-top: .75rem;
+                margin-top: 1.75rem;
                 padding: .5rem 1rem;
                 border-radius: 10px;
                 letter-spacing: 0;
